# mqc3

./: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: pages.yaml
docs/: README.md
docs/source/: async_execution.ipynb  circuit_repr.ipynb  conf.py  derivation.ipynb  execution.ipynb  feedforward.ipynb  gates.md  graph_repr.ipynb  index.md  installation.md  machinery_repr.ipynb  quickstart.ipynb  references.bib  simulation.ipynb  theory.md  viz_circuit_repr.ipynb  viz_graph_repr.ipynb  viz_machinery_repr.ipynb
docs/source/_images/: circuit_repr_sample_circuit.drawio  circuit_repr_single_mode_gate.drawio  circuit_repr_single_mode_gate_chain.drawio  circuit_repr_teleportation.drawio  circuit_repr_two_mode_gate.drawio  graph_repr_example.drawio  quickstart_example.drawio  quickstart_multi_param.drawio
src/mqc3/: __init__.py  constant.py  math.py  utility.py
src/mqc3/circuit/: __init__.py  program.py  result.py  state.py  (+2 more)
tests/: conftest.py
tests/circuit/: test_operations.py  test_program.py  test_result.py  test_state.py  test_visualizer.py
tests/e2e/: common.py  test_cert.py  test_mqc3_execute_circuit.py  test_mqc3_execute_graph.py  test_mqc3_execute_machinery.py  test_mqc3_invalid_request.py  test_mqc3_multiple_requests.py  test_mqc3_nullifier.py  test_sim_execute_circuit_local.py  test_sim_execute_circuit_remote.py  test_sim_execute_graph.py  test_sim_execute_machinery.py  test_sim_invalid_request.py
tests/feedforward/: test_feedforward.py
tests/graph/: common.py  test_compose.py  test_convert_beamsearch.py  test_convert_greedy.py  test_ops.py  test_program.py  test_result.py  test_visualize.py
tests/machinery/: test_macro_angle.py  test_pb.py  test_program.py  test_result.py  test_visualize.py
(+72 files in other folders)
